# emasoft-plugins

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  README.md  cliff.toml
.claude-plugin/: marketplace.json
.github/workflows/: update-submodules.yml  validate.yml
claude-plugins-validation/: README.md  pyproject.toml
claude-plugins-validation/.claude-plugin/: plugin.json
claude-plugins-validation/agents/: plugin-validator.md
claude-plugins-validation/scripts/: validate_hook.py  validate_marketplace.py  validate_mcp.py  validate_plugin.py  validate_skill.py
claude-plugins-validation/skills/plugin-validation-skill/: SKILL.md
claude-plugins-validation/skills/plugin-validation-skill/references/: marketplace-validation.md  skill-validation.md
docs_dev/: audit-crossref-security-20260123.md  audit-docs-20260123.md  audit-hooks-20260123.md  audit-json-20260123.md  audit-manifests-20260123.md  audit-python-20260123.md
perfect-skill-suggester/: .gitignore  README.md
perfect-skill-suggester/.claude-plugin/: plugin.json
perfect-skill-suggester/commands/: pss-reindex-skills.md
perfect-skill-suggester/docs/: ANTHROPIC-COMPLIANCE-REPORT.md  DEVELOPMENT.md  PSS-ARCHITECTURE.md  PSS_FILE_FORMAT_SPEC.md
perfect-skill-suggester/scripts/: pss_discover_skills.py  pss_validate_plugin.py
scripts/: generate-changelog.py  notify-marketplace.yml.template  pre-commit-hook.py  pre-push-hook.py  push-plugins.sh  release-plugin.py  setup-hooks.py  setup-hooks.sh  sync-versions.py  sync_marketplace_versions.py  verify-release.py
(+2 files in other folders)
